|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.4.0alpha2

- Core:
  . Fixed bug #78151 (Segfault caused by indirect expressions in PHP 7.4a1).
    (Nikita)
  . Fixed bug #78154 (SEND_VAR_NO_REF does not always send reference). (Nikita)

- Opcache:
  . Fixed bug #78106 (Path resolution fails if opcache disabled during request).
    (Nikita)

- SQLite3:
  . Implement FR ##70950 (Make SQLite3 Online Backup API available). (BohwaZ)

13 Jun 2019, PHP 7.4.0alpha1

- Core:
  . Fixed bug #77345 (Stack Overflow caused by circular reference in garbage
    collection). (Alexandru Patranescu, Nikita, Dmitry)
  . Fixed bug #77877 (call_user_func() passes $this to static methods).
    (Dmitry)
  . Implemented FR #76148 (Add array_key_exists() to the list of specially
    compiled functions). (Majkl578)
  . Fixed bug #76430 (__METHOD__ inconsistent outside of method).
    (Ryan McCullagh, Nikita)
  . Fixed bug #75921 (Inconsistent: No warning in some cases when stdObj is
    created on the fly). (David Walker)
  . Fixed bug #71030 (Self-assignment in list() may have inconsistent behavior).
    (Nikita)
  . Fixed bug #76451 (Aliases during inheritance type checks affected by
    opcache). (Nikita)

- CLI:
  . The built-in CLI server now reports the request method in log files.
    (Simon Welsh)

- COM:
  . Deprecated registering of case-insensitive constants from typelibs. (cmb)

- CURL:
  . Fixed bug #76480 (Use curl_multi_wait() so that timeouts are respected).
    (Pierrick)
  . Implemented FR #77711 (CURLFile should support UNICODE filenames). (cmb)
  . Deprecated CURLPIPE_HTTP1. (cmb)
  . Deprecated $version parameter of curl_version(). (cmb)

- Date:
  . Fixed bug #75232 (print_r of DateTime creating side-effect). (Nikita)

- FFI:
  . Added FFI extension. (Dmitry)

-Fileinfo:
  . Fixed bug #78075 (finfo_file treats JSON file as text/plain). (Anatol)

- Filter: