@@ -1,0 +1,4 @@
+<?php
+register_shutdown_function(function() {
+    echo "Shutdown\n";
+});
